--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
 	src: url('commodore.woff');
 }
 
-html, body, canvas {
+* {
 	margin: 0;
 	padding: 0;
 	border: none;
 	outline: none;
-	display: block;
+	cursor: none;
 }
 
 #font-loader {
@@ -21,6 +21,7 @@ html, body, canvas {
 }
 
 #canvas {
+	display: block;
 	position: absolute;
 	left: 0;
 	top: 0;
